# ChopShop

./: .gitignore  GUI_GUIDE.md  JUNGLE_GUIDE.md  LICENSE  README.md  chopshop_plan.md  drums.mid  pyproject.toml
chopshop/: analysis.py  chopmap.py  cli.py  constants.py  export.py  files.py  labeler.py  midi_gen.py  preset.py  preview.py
chopshop/gui/: __init__.py  midi_main.py  midi_window.py  waveform.py  window.py
chopshop/patterns/: amen-classic.json  basic-jungle.json  halftime.json  roller.json
docs/: GUI_GUIDE.md  MIDI_GUIDE.md
test files/: testpreset.aupreset  thirrrd.aupreset
tests/: test_analysis.py  test_chopmap.py  test_export.py  test_files.py  test_labeler.py  test_midi_gen.py  test_preset.py
