[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chopshop"
version = "0.1.0"
description = "Chop audio and generate AUSampler presets for GarageBand"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "mido>=1.3.0",
]

[project.scripts]
chopshop = "chopshop.cli:main"
chopshop-gui = "chopshop.gui:main"
chopshop-midi = "chopshop.midi_gen:main"

[project.optional-dependencies]
gui = ["PySide6>=6.6.0"]
dev = ["pytest>=7.0", "PySide6>=6.6.0"]
